# bfptr

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: cmake-multi-platform.yml
include/: bfptr.h
src/: bfptr.c
tests/: bfptr_test.c  hello_world.c  left_until_last.c  limits.c  right_until_first.c
